--- a/src/main/frontend/app-cultural/src/app/app.component.html
+++ b/src/main/frontend/app-cultural/src/app/app.component.html
@@ -12,7 +12,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,222,0,1) 32%, rg
 
   <div class="container ">
     <div>
-      <img alt="IES Belén" src="assets/imagen/bannerBelen.png" width="250px">
+      <img alt="IES Belén" src="assets/imagen/bannerBelen.png" >
     </div>
     <div class=" navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
