--- a/src/main/frontend/app-cultural/src/app/home/home.component.html
+++ b/src/main/frontend/app-cultural/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<h2 class="heading">Las empresas tecnológicas en Málaga <hr></h2>
+
+  <div class="map-container">
+    <div class="map-frame">
+      <div id="map"></div>
+
+    </div>
+  </div>
+
+
+
